# dottie

./: Cargo.toml  README.md
.github/workflows/: ci.yml
fixtures/: dottie.toml
src/: cli.rs  command.rs  commands.rs  config.rs  error.rs  fs.rs  lib.rs  macros.rs  main.rs
src/commands/: add.rs  cd.rs  clone.rs  info.rs  init.rs  ls.rs  unlink.rs
