[package]
name = "dottie"
version = "0.1.0"
authors = ["David Zhang <crispgm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
colored = "2"
